--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,17 +1,12 @@
 /* Footer.css */
-
-/* Container for the footer */
 .footer {
   padding: 20px;
   background-color: #333;
   color: white;
   text-align: center;
   width: 100%;
-  max-width: 100vw; /* Ensure it does not exceed the viewport width */
-  position: absolute;
-  bottom: 0;
+  margin: 0 auto; /* Center the footer */
   box-sizing: border-box; /* Include padding and border in the width calculation */
-  overflow-x: hidden; /* Prevent horizontal overflow */
   border: 2px solid red; /* This will help visualize the footer's boundary */
 }
 
@@ -20,4 +15,3 @@
   margin: 0;
   font-size: 1em;
 }
-  
